02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin4
  namespace: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin4

  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      containers:
        - name: pgadmintest
          image: dpage/pgadmin4         
          ports:         
             - containerPort: 80 
          volumeMounts:
             - mountPath: /var/lib/pgadmin
               name: pgadmin-data
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "512"
          securityContext:
                   privileged: true
                   runAsUser: 0                                                
                   allowPrivilegeEscalation: true                                                                  
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-data
