03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
  namespace: postgresql
spec:
  selector:
    app: pgadmin4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
