04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin4
  namespace: postgresql
spec:
  ingressClassName: "nginx"
  rules:
    - host: 'pgadmin.test.di.rt.ru'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin4
                port:
                  number: 80
